Microsoft's documentation seems to be wrong

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -45,7 +45,7 @@ jobs:
         env:
           LANGUAGE: ${{ matrix.language }}
         run:
-          Set-WinUILanguageOverride $env:LANGUAGE
+          Set-WinUILanguageOverride -Language $env:LANGUAGE
           (Get-UICulture).Name -eq $env:LANGUAGE
       - name: Check language
         run: Get-Culture
