--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -50,8 +50,8 @@ jobs:
         run: .\Install-WinGet.ps1
       - name: Test with Pester
         run: |
-          # Required for Crescendo-generated modules to interpret 
-          [Console]::OutputEncoding = [System.Text.Encoding]::UTF8;
+          # Required for Crescendo-generated modules to interpret
+          [Console]::InputEncoding = [Console]::OutputEncoding = [System.Text.Encoding]::UTF8;
           Invoke-Pester -Configuration (New-PesterConfiguration -Hashtable @{
             Run = @{
               Exit = $true
