Long package name version fix (#17)

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,9 +15,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup PowerShell module cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: cacher
         with:
           path: "~/.local/share/powershell/Modules"
@@ -30,7 +30,7 @@ jobs:
         shell: pwsh
         run: ./build.ps1
       - name: Bundle up module
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: module
           path: ./src/
@@ -39,9 +39,9 @@ jobs:
     runs-on: windows-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Download module
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
           name: module
           path: C:\Users\runneradmin\Documents\PowerShell\Modules\Cobalt\
@@ -50,50 +50,31 @@ jobs:
         run: .\Install-WinGet.ps1
       - name: Test with Pester
         run: |
-          # Required for Crescendo-generated modules to interpret 
-          [Console]::OutputEncoding = [System.Text.Encoding]::UTF8;
+          # Codepage 437 being the default input and output OEM code page for US-English systems
+          # Maybe one day we can all use UTF-8 by default and be done with this nonsense: https://stackoverflow.com/questions/57131654/using-utf-8-encoding-chcp-65001-in-command-prompt-windows-powershell-window/57134096#57134096
+          # Required for simulated the encoding used by interactive terminals
+          [Console]::InputEncoding = [Console]::OutputEncoding = [System.Text.Encoding]::GetEncoding(437)
           Invoke-Pester -Configuration (New-PesterConfiguration -Hashtable @{
             Run = @{
               Exit = $true
             }
-            TestResult = @{
-              Enabled = $true
-              OutputFormat = 'JUnitXML'
+            Output = @{
+              Verbosity = 'Detailed'
             }
           })
-      - name: Upload Pester test results
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: test-results
-          path: testResults.xml
       - name: Upload WinGet logs
         if: always()
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: WinGet-logs
           path: C:\Users\runneradmin\AppData\Local\Packages\Microsoft.DesktopAppInstaller*\LocalState\DiagOutputDir\
-  Results:
-    needs: Test
-    if: success() || failure()
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download Test Results
-        uses: actions/download-artifact@v2
-        with:
-          name: test-results
-          path: test-results
-      - name: Publish Test Results
-        uses: EnricoMi/publish-unit-test-result-action@v1
-        with:
-          files: test-results/**/*.xml
   Publish:
     needs: Test
     if: github.event_name == 'release' && github.event.action == 'published'
     runs-on: ubuntu-latest
     steps:
       - name: Download module
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
           name: module
           path: '~/.local/share/powershell/Modules/Cobalt'
